fix(slides-cards.js): fix sliding on mobile

--- a/css/new_style.css
+++ b/css/new_style.css
@@ -482,7 +482,7 @@ h4 {
     }
 
     body {
-        margin: 0 50px;
+        margin: 0 20px;
     }
 
     h2 {
@@ -494,7 +494,7 @@ h4 {
     }
 
     h4 {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
     #photo_container {
